# app/Modules/API/Sources/openapi.json
@@ -261,6 +261,9 @@
               "type": "string"
             }
           },
+          "replicant_cooperation": {
+            "type": "string"
+          },
           "experience_points_total": {
             "type": "integer"
           },
@@ -342,6 +345,11 @@
               "type": "string"
             },
             "nullable": true
+          },
+          "replicant_cooperation": {
+            "type": "string",
+            "default": null,
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -364,6 +372,9 @@
             "items": {
               "type": "string"
             }
+          },
+          "replicant_cooperation": {
+            "type": "string"
           },
           "status": {
             "type": "string"
@@ -697,6 +708,9 @@
               "additionalProperties": {}
             }
           },
+          "cohort_permission": {
+            "type": "string"
+          },
           "teleport": {
             "$ref": "#/components/schemas/app_schemas_replicants_TeleportInfoSchema"
           }
@@ -733,6 +747,10 @@
             "type": "string",
             "description": "Public project description (max 2000 chars)",
             "nullable": true
+          },
+          "cohort_permission": {
+            "type": "string",
+            "description": "Cooperation permission: 'private' or 'public'"
           }
         },
         "additionalProperties": false
@@ -767,6 +785,9 @@
           "project": {
             "type": "string",
             "nullable": true
+          },
+          "cohort_permission": {
+            "type": "string"
           }
         },
         "additionalProperties": false
@@ -1454,6 +1475,11 @@
           },
           "in_control_range": {
             "type": "boolean"
+          },
+          "owner_replicant_code": {
+            "type": "string",
+            "default": null,
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -4490,6 +4516,39 @@
             "type": "string",
             "minLength": 1
           }
+        },
+        {
+          "in": "query",
+          "name": "cursor",
+          "description": "Position in the list to start from",
+          "schema": {
+            "type": "integer",
+            "default": null,
+            "nullable": true
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "limit",
+          "description": "Number of events to show)",
+          "schema": {
+            "type": "integer",
+            "default": 20,
+            "minimum": 1,
+            "maximum": 100
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "latest",
+          "description": "Show latest events. Incompatible with cursor",
+          "schema": {
+            "type": "boolean",
+            "default": false
+          },
+          "required": false
         }
       ]
     },
@@ -5045,6 +5104,72 @@
             "type": "string",
             "minLength": 1
           }
+        },
+        {
+          "in": "query",
+          "name": "cursor",
+          "description": "Position in the list to start from",
+          "schema": {
+            "type": "integer",
+            "default": null,
+            "nullable": true
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "limit",
+          "description": "Number of events to show",
+          "schema": {
+            "type": "integer",
+            "default": 20,
+            "minimum": 1,
+            "maximum": 100
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "latest",
+          "description": "Show latest events. Incompatible with cursor",
+          "schema": {
+            "type": "boolean",
+            "default": false
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "event_type",
+          "description": "Filter results by type of event.",
+          "schema": {
+            "type": "string",
+            "default": null,
+            "nullable": true
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "device_type",
+          "description": "Filter results by type of device.",
+          "schema": {
+            "type": "string",
+            "default": null,
+            "nullable": true
+          },
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "device",
+          "description": "Filter results to a single device code.",
+          "schema": {
+            "type": "string",
+            "default": null,
+            "nullable": true
+          },
+          "required": false
         }
       ]
     },
